Tue Feb  3 16:25:47 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* alu.h (IMEM32, IMEM32_IMMED): Rename IMEM and IMEM_IMMED so that
 	in sync with recent igen change.

Sun Feb  1 16:47:51 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure: Regenerated to track ../common/aclocal.m4 changes.

Sat Jan 31 18:15:41 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure: Regenerated to track ../common/aclocal.m4 changes.

Fri Jan 30 11:47:50 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* cpu.h (CPU_CIA): Delete macro, replace with...
 	(CIA_SET, CIA_GET): Define.

Wed Jan 28 18:44:33 1998  Michael Meissner  <meissner@cygnus.com>

	* misc.c (tic80_trace_cmp_internal): New function to return
	compare bits as a string.
	(tic80_trace_{,fpu2}cmp): New functions for tracing cmp and fcmp.

	* cpu.h (tic80_trace_{,fpu2}cmp): Add declaration.
	(TRACE_{,FPU2}CMP): New macros for tracing compares.

	* insns (do_{,f}cmp): Use compare specific tracing functions to
	print out the flag bits.

Mon Jan 19 22:26:29 1998  Doug Evans  <devans@seba>

	* configure: Regenerated to track ../common/aclocal.m4 changes.

Mon Dec 15 23:17:11 1997  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure: Regenerated to track ../common/aclocal.m4 changes.
	* config.in: Ditto.

Thu Dec  4 09:21:05 1997  Doug Evans  <devans@canuck.cygnus.com>

	* configure: Regenerated to track ../common/aclocal.m4 changes.

Mon Nov 24 14:57:58 1997  Doug Evans  <devans@seba.cygnus.com>

	* cpu.h (TRACE_COND_BR): Use TRACE_BRANCH_P, not TRACE_ALU_P.

Sat Nov 22 21:42:09 1997  Andrew Cagney  <cagney@b1.cygnus.com>

	* interp.c (engine_step): Replace SIGTRAP with SIM_SIGTRAP.
	(engine_run_until_stop): Replace SIGINT with SIM_SIGINT.

	* sim-main.h: Include sim-signal.h.
	(SIGTRAP): Delete definition.

	* interp.c, sim-calls.c: Do not include signal.h.

	* insns (illegal): SIGILL -> SIM_SIGILL.
 	(fp_unavailable): SIGFPE -> SIM_SIGFPE.
	(do_trap): SIGTRAP -> SIM_SIGTRAP.
	